fix(Projects): fix align to bottom button for projects

--- a/src/app/modules/projects/projects.component.css
+++ b/src/app/modules/projects/projects.component.css
@@ -86,6 +86,7 @@
     margin: 10px;
     background-color: #999;
     border-color: #777;
+    margin-top: auto;
 }
 
 #wrapper.dark-theme div.project-card {
